globus-gridftp-server (10.4-1+gt6.@distro@) @distro@; urgency=low

  * fix broken remote_node auth without sharing

 -- Globus Toolkit <support@globus.org>  Thu, 19 May 2016 09:49:15 -0500

globus-gridftp-server (10.3-1+gt6.@distro@) @distro@; urgency=low

  * fix configuration for ipc_interface
  * fix remote_node connection failing when ipc_subject isn't used

 -- Globus Toolkit <support@globus.org>  Wed, 18 May 2016 12:02:35 -0500

globus-gridftp-server (10.2-1+gt6.@distro@) @distro@; urgency=low

  * Spelling

 -- Globus Toolkit <support@globus.org>  Tue, 03 May 2016 16:35:57 -0400

globus-gridftp-server (10.1-1+gt6.@distro@) @distro@; urgency=low

  * Don't overwite LDFLAGS

 -- Globus Toolkit <support@globus.org>  Tue, 03 May 2016 16:20:48 -0400

globus-gridftp-server (10.0-1+gt6.@distro@) @distro@; urgency=low

  * Updates for https server support

 -- Globus Toolkit <support@globus.org>  Mon, 02 May 2016 11:08:04 -0400

globus-gridftp-server (9.9-2+gt6.@distro@) @distro@; urgency=low

  * Change driver dependencies to not include 0 suffix

 -- Globus Toolkit <support@globus.org>  Wed, 27 Apr 2016 14:40:03 -0400

globus-gridftp-server (9.9-1+gt6.@distro@) @distro@; urgency=low

  * add -dlpreload force tests

 -- Globus Toolkit <support@globus.org>  Thu, 21 Apr 2016 11:21:20 -0500

globus-gridftp-server (9.8-1+gt6.@distro@) @distro@; urgency=low

  * Use prelinks for tests so that they run on El Capitan

 -- Globus Toolkit <support@globus.org>  Mon, 18 Apr 2016 15:04:13 -0400

globus-gridftp-server (9.7-1+gt6.@distro@) @distro@; urgency=low

  * fix crash when storattr is used without modify

 -- Globus Toolkit <support@globus.org>  Thu, 14 Apr 2016 13:55:01 -0500

globus-gridftp-server (9.6-1+gt6.@distro@) @distro@; urgency=low

  * add SITE WHOAMI command to return currently authenticated user

 -- Globus Toolkit <support@globus.org>  Thu, 24 Mar 2016 12:08:03 -0500

globus-gridftp-server (9.5-1+gt6.@distro@) @distro@; urgency=low
