@@ -1,3 +1,9 @@
+globus-gridftp-server (10.5-1+gt6.@distro@) @distro@; urgency=low
+
+  * Don't errantly kill a transfer due to timeout while client is still connected
+
+ -- Globus Toolkit <support@globus.org>  Mon, 27 Jun 2016 15:16:23 -0500
+
 globus-gridftp-server (10.4-1+gt6.@distro@) @distro@; urgency=low
 
   * fix broken remote_node auth without sharing
